--- a/.classpath
+++ b/.classpath
@@ -1,24 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry including="**/*.scala|**/*.java|**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry including="**/*.scala|**/*.java|**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry including="**/*.scala|**/*.java|**/*.java" kind="src" path="src/main/scala"/>
 	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
-	<classpathentry kind="var" path="M2_REPO/junit/junit/4.8/junit-4.8.jar"/>
-	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2/cglib-nodep-2.2.jar" sourcepath="M2_REPO/cglib/cglib-nodep/2.2/cglib-nodep-2.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/cglib/cglib-nodep/2.2/cglib-nodep-2.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/org/easymock/easymock/3.0/easymock-3.0.jar" sourcepath="M2_REPO/org/easymock/easymock/3.0/easymock-3.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/org/easymock/easymock/3.0/easymock-3.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/org/clapper/grizzled-slf4j_2.8.1/0.4/grizzled-slf4j_2.8.1-0.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/sf/jopt-simple/jopt-simple/3.2/jopt-simple-3.2.jar" sourcepath="M2_REPO/net/sf/jopt-simple/jopt-simple/3.2/jopt-simple-3.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/net/sf/jopt-simple/jopt-simple/3.2/jopt-simple-3.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/4.8.2/junit-4.8.2.jar" sourcepath="M2_REPO/junit/junit/4.8.2/junit-4.8.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/junit/junit/4.8.2/junit-4.8.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/com/sna-projects/kafka/kafka/0.5-SNAPSHOT/kafka-0.5-SNAPSHOT.jar" sourcepath="M2_REPO/com/sna-projects/kafka/kafka/0.5-SNAPSHOT/kafka-0.5-SNAPSHOT-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/com/sna-projects/kafka/kafka/0.5-SNAPSHOT/kafka-0.5-SNAPSHOT-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.15/log4j-1.2.15.jar" sourcepath="M2_REPO/log4j/log4j/1.2.15/log4j-1.2.15-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/1.2/objenesis-1.2.jar" sourcepath="M2_REPO/org/objenesis/objenesis/1.2/objenesis-1.2-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/org/objenesis/objenesis/1.2/objenesis-1.2-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/org/scalatest/scalatest/1.3/scalatest-1.3.jar" sourcepath="M2_REPO/org/scalatest/scalatest/1.3/scalatest-1.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/org/scalatest/scalatest/1.3/scalatest-1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1.jar" sourcepath="M2_REPO/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="M2_REPO/zkclient/zkclient/0.1.0/zkclient-0.1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/zookeeper/zookeeper/3.3.0/zookeeper-3.3.0.jar" sourcepath="M2_REPO/org/apache/zookeeper/zookeeper/3.3.0/zookeeper-3.3.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/sam/.m2/repository/org/apache/zookeeper/zookeeper/3.3.0/zookeeper-3.3.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER&quot;"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="src/main/resources/asm-3.3.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/cglib-2.2.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/easymock-3.0.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/jopt-simple-3.2.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/junit-4.1.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/kafka-0.05.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/objenesis-1.2.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/scala-compiler-2.8.0.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/scala-library-2.8.0.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/zkclient-0.1.0.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/zookeeper-3.3.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
